[gd_scene load_steps=4 format=3 uid="uid://de2xh76moav6q"]

[ext_resource type="Script" uid="uid://bh4awym0lijjs" path="res://scripts/profile/achievements_menu.gd" id="1_11rla"]
[ext_resource type="Theme" uid="uid://bqtjul82stgbk" path="res://settings/button_theme.tres" id="2_0124g"]
[ext_resource type="Theme" uid="uid://qd54fsrw70mj" path="res://settings/tab_container_theme.tres" id="2_j15uf"]

[node name="AchievementsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_11rla")

[node name="Tabs" type="TabContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.926
offset_bottom = -0.0800781
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_j15uf")
tab_alignment = 1
current_tab = 0

[node name="ACHIEVEMENTS_TAB" type="TabBar" parent="Tabs"]
layout_mode = 2
tab_alignment = 1
metadata/_tab_index = 0

[node name="MarginContainer" type="MarginContainer" parent="Tabs/ACHIEVEMENTS_TAB"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 15

[node name="AchievementsList" type="VBoxContainer" parent="Tabs/ACHIEVEMENTS_TAB/MarginContainer"]
unique_name_in_owner = true
clip_contents = true
layout_mode = 2
theme_override_constants/separation = 15

[node name="STATISTICS_TAB" type="TabBar" parent="Tabs"]
visible = false
layout_mode = 2
tab_alignment = 1
metadata/_tab_index = 1

[node name="RichTextLabel" type="RichTextLabel" parent="Tabs/STATISTICS_TAB"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/normal_font_size = 28
text = "STATISTICS_NOT_IMPLEMENTED"
fit_content = true
horizontal_alignment = 1
vertical_alignment = 1

[node name="CancelButton" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_top = 0.926
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -0.0800781
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_0124g")
text = "CANCEL_BUTTON"

[node name="MenuLabel" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.074
offset_bottom = 0.0800018
text = "ACHIEVEMENTS_MENU_LABEL"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="CancelButton" to="." method="_on_cancel_button_pressed"]
